changed on Feb 28, 2022

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -416,6 +416,7 @@ section {
 }
 
 .section-title {
+  margin-top: 50px;
   text-align: center;
   padding-bottom: 30px;
 }
@@ -1156,16 +1157,16 @@ section {
   position: relative;
   font-family: "Poppins", sans-serif;
   padding: 0;
-  margin: 0 0 35px 0;
+  margin: 0 0 20px 0;
 }
 #footer p {
   font-size: 15;
   font-style: italic;
   padding: 0;
-  margin: 0 0 20px 0;
+  margin: 0 0 10px 0;
 }
 #footer .social-links {
-  margin: 0 0 30px 0;
+  margin: 0 0 12px 0;
 }
 #footer .social-links a {
   font-size: 18px;
