--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -854,13 +854,22 @@ section {
   margin-bottom: 60px;
   position: relative;
 } */
-.Courses .course-body {
+
+.Courses .course-fall22 {
   padding: 15px;
   margin-top: -25px;
+  margin-left: 55px;
 }
-.Courses .course-body2 {
+
+.Courses .course-spring22 {
   padding: 15px;
   margin-top: -5px;
+  margin-left: 55px;
+}
+.Courses .course-fall21 {
+  padding: 15px;
+  margin-top: -5px;
+  margin-left: 55px;
 }
 
 .Courses .course-title {
