--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,13 +28,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-/*--------------------------------------------------------------
+/*-------------------------------------------------------------
 # Added by Rex
 --------------------------------------------------------------*/
 .img-fluid {
-  height: 620px;
-  width: 500px;
-  margin-left: 70px;
+  height: auto;
+  max-width: 80%;
+  margin-left: 30px;
 }
 
 .col-lg-6.pt-4.pt-lg-0{
